// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReleaseHeaderRemainingDays Display remaining days When there is negative number of start days, Then 0 is displayed and 0.00% in tooltip 1`] = `
<div
  class="release-remaining tlp-tooltip tlp-tooltip-left"
  data-tlp-tooltip="0.00%"
>
  <div
    class="release-remaining-header"
  >
    <i
      class="release-remaining-icon fa fa-calendar"
    />
     
    <span
      class="release-remaining-value"
    >
      
            0
        
    </span>
     
    <translate-stub
      class="release-remaining-text"
      tag="span"
      translaten="-10"
      translateplural="days to go"
    >
      
            day to go
        
    </translate-stub>
  </div>
   
  <div
    class="release-remaining-progress"
  >
    <div
      class="release-remaining-progress-value"
      style="width: 0.00%;"
    />
  </div>
</div>
`;

exports[`ReleaseHeaderRemainingDays Display remaining days When there is negative remaining days, Then 0 is displayed and 100% in tooltip 1`] = `
<div
  class="release-remaining tlp-tooltip tlp-tooltip-left"
  data-tlp-tooltip="100.00%"
>
  <div
    class="release-remaining-header"
  >
    <i
      class="release-remaining-icon fa fa-calendar"
    />
     
    <span
      class="release-remaining-value"
    >
      
            0
        
    </span>
     
    <translate-stub
      class="release-remaining-text"
      tag="span"
      translaten="-10"
      translateplural="days to go"
    >
      
            day to go
        
    </translate-stub>
  </div>
   
  <div
    class="release-remaining-progress"
  >
    <div
      class="release-remaining-progress-value"
      style="width: 100.00%;"
    />
  </div>
</div>
`;

exports[`ReleaseHeaderRemainingDays Display remaining days When there is number of start days but equal at 0, Then number days of end is displayed and percent in tooltip 1`] = `
<div
  class="release-remaining tlp-tooltip tlp-tooltip-left"
  data-tlp-tooltip="0.00%"
>
  <div
    class="release-remaining-header"
  >
    <i
      class="release-remaining-icon fa fa-calendar"
    />
     
    <span
      class="release-remaining-value release-remaining-value-danger"
    >
      
            10
        
    </span>
     
    <translate-stub
      class="release-remaining-text"
      tag="span"
      translaten="10"
      translateplural="days to go"
    >
      
            day to go
        
    </translate-stub>
  </div>
   
  <div
    class="release-remaining-progress"
  >
    <div
      class="release-remaining-progress-value release-remaining-progress-value-danger"
      style="width: 0.00%;"
    />
  </div>
</div>
`;

exports[`ReleaseHeaderRemainingDays Display remaining days When there is remaining days and is null, Then 0 is displayed and there is a message in tooltip 1`] = `
<div
  class="release-remaining tlp-tooltip tlp-tooltip-left"
  data-tlp-tooltip="No end date defined."
>
  <div
    class="release-remaining-header"
  >
    <i
      class="release-remaining-icon fa fa-calendar"
    />
     
    <span
      class="release-remaining-value release-remaining-value-disabled"
    >
      
            0
        
    </span>
     
    <translate-stub
      class="release-remaining-text"
      tag="span"
      translateplural="days to go"
    >
      
            day to go
        
    </translate-stub>
  </div>
   
  <div
    class="release-remaining-progress"
  >
    <div
      class="release-remaining-progress-value release-remaining-progress-value-disabled"
    />
  </div>
</div>
`;

exports[`ReleaseHeaderRemainingDays Display remaining days When there is remaining days but equal at 0, Then remaining days is displayed and percent in tooltip 1`] = `
<div
  class="release-remaining tlp-tooltip tlp-tooltip-left"
  data-tlp-tooltip="100.00%"
>
  <div
    class="release-remaining-header"
  >
    <i
      class="release-remaining-icon fa fa-calendar"
    />
     
    <span
      class="release-remaining-value"
    >
      
            0
        
    </span>
     
    <translate-stub
      class="release-remaining-text"
      tag="span"
      translaten="0"
      translateplural="days to go"
    >
      
            day to go
        
    </translate-stub>
  </div>
   
  <div
    class="release-remaining-progress"
  >
    <div
      class="release-remaining-progress-value"
      style="width: 100.00%;"
    />
  </div>
</div>
`;

exports[`ReleaseHeaderRemainingDays Display remaining days When there is remaining days, not null and greater than 0, Then remaining days is displayed and percent in tooltip 1`] = `
<div
  class="release-remaining tlp-tooltip tlp-tooltip-left"
  data-tlp-tooltip="50.00%"
>
  <div
    class="release-remaining-header"
  >
    <i
      class="release-remaining-icon fa fa-calendar"
    />
     
    <span
      class="release-remaining-value release-remaining-value-danger"
    >
      
            5
        
    </span>
     
    <translate-stub
      class="release-remaining-text"
      tag="span"
      translaten="5"
      translateplural="days to go"
    >
      
            day to go
        
    </translate-stub>
  </div>
   
  <div
    class="release-remaining-progress"
  >
    <div
      class="release-remaining-progress-value release-remaining-progress-value-danger"
      style="width: 50.00%;"
    />
  </div>
</div>
`;

exports[`ReleaseHeaderRemainingDays Display remaining days When there isn't number of start days, Then 0 is displayed and a message in tooltip 1`] = `
<div
  class="release-remaining tlp-tooltip tlp-tooltip-left"
  data-tlp-tooltip="No start date defined."
>
  <div
    class="release-remaining-header"
  >
    <i
      class="release-remaining-icon fa fa-calendar"
    />
     
    <span
      class="release-remaining-value release-remaining-value-disabled"
    >
      
            0
        
    </span>
     
    <translate-stub
      class="release-remaining-text"
      tag="span"
      translateplural="days to go"
    >
      
            day to go
        
    </translate-stub>
  </div>
   
  <div
    class="release-remaining-progress"
  >
    <div
      class="release-remaining-progress-value release-remaining-progress-value-disabled"
    />
  </div>
</div>
`;

exports[`ReleaseHeaderRemainingDays Display remaining days When there isn't remaining days, Then 0 is displayed and there is a message in tooltip 1`] = `
<div
  class="release-remaining tlp-tooltip tlp-tooltip-left"
  data-tlp-tooltip="No start date defined."
>
  <div
    class="release-remaining-header"
  >
    <i
      class="release-remaining-icon fa fa-calendar"
    />
     
    <span
      class="release-remaining-value release-remaining-value-disabled"
    >
      
            0
        
    </span>
     
    <translate-stub
      class="release-remaining-text"
      tag="span"
      translateplural="days to go"
    >
      
            day to go
        
    </translate-stub>
  </div>
   
  <div
    class="release-remaining-progress"
  >
    <div
      class="release-remaining-progress-value release-remaining-progress-value-disabled"
    />
  </div>
</div>
`;
